[gd_scene load_steps=5 format=3 uid="uid://cfdjs6j10cq3g"]

[ext_resource type="Script" path="res://scenes/sprout/sprout.gd" id="1_qoh3e"]
[ext_resource type="Texture2D" uid="uid://bkrcy01wnkxx1" path="res://addons/google_material/add_20dp_FILL1_wght400_GRAD0_opsz20.svg" id="2_3cimm"]
[ext_resource type="Texture2D" uid="uid://c5mlbq3ug6hjh" path="res://addons/google_material/folder_open_20dp_FILL1_wght400_GRAD0_opsz20.svg" id="3_rnfyf"]
[ext_resource type="Texture2D" uid="uid://blwb2q51rks62" path="res://addons/google_material/delete_20dp_FILL1_wght400_GRAD0_opsz20.svg" id="4_qtx46"]

[node name="Sprout" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qoh3e")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="NewProjectButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "New Project"
mouse_default_cursor_shape = 2
icon = ExtResource("2_3cimm")

[node name="ImportProjectButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Open Project"
mouse_default_cursor_shape = 2
icon = ExtResource("3_rnfyf")

[node name="DeleteProjectButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Delete Project"
mouse_default_cursor_shape = 2
icon = ExtResource("4_qtx46")

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProjectList" type="ItemList" parent="HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
item_count = 3
item_0/text = "Test"
item_1/text = "SDF"
item_2/text = "TRHA"

[node name="NewProjectDialog" type="FileDialog" parent="."]
initial_position = 4
size = Vector2i(805, 449)
dialog_hide_on_ok = true
access = 2
filters = PackedStringArray("*.json")

[node name="ImportProjectDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 4
size = Vector2i(805, 449)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.json")

[connection signal="pressed" from="HBoxContainer/VBoxContainer/NewProjectButton" to="." method="_on_new_project_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ImportProjectButton" to="." method="_on_import_project_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/DeleteProjectButton" to="." method="_on_delete_project_button_pressed"]
[connection signal="item_activated" from="HBoxContainer/ScrollContainer/ProjectList" to="." method="_on_item_activated"]
[connection signal="file_selected" from="NewProjectDialog" to="." method="_on_dialog_file_selected"]
[connection signal="file_selected" from="ImportProjectDialog" to="." method="_on_dialog_file_selected"]
